Alignment fixes in image component

--- a/src/app/content/image-container/image/image.component.scss
+++ b/src/app/content/image-container/image/image.component.scss
@@ -10,24 +10,25 @@
 // }
 
 .card {
-    width: 20rem;
+    // width: 20rem;
+    width: 100%;
     margin: 20px auto;
     overflow: auto
 }
 
-.image-card {
-    max-width: 400px;
-}
+// .image-card {
+//     max-width: 400px;
+// }
 
-.image {
-    background-image: url('https://material.angular.io/assets/img/examples/shiba1.jpg');
-    background-size: cover;
-    max-width: 400px;
-}
+// .image {
+//     background-image: url('https://material.angular.io/assets/img/examples/shiba1.jpg');
+//     background-size: cover;
+//     max-width: 400px;
+// }
   
 .header-image {
-    background-image: url('https://material.angular.io/assets/img/examples/shiba1.jpg');
-    background-size: cover;
+    // background-image: url('https://material.angular.io/assets/img/examples/shiba1.jpg');
+    background-size: contain;
 }
 
 mat-divider {
